[package]
name = "api_identity"
description = "macro used by for Oxide control plane resources with an identity"
version = "0.1.0"
authors = ["David Pacheco <dap@oxidecomputer.com>"]
edition = "2018"
repository = "https://github.com/oxidecomputer/omicron/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.0"
quote = "1.0.0"
syn = "1.0.17"
