[package]
name = "api_identity"
description = "macro used for Oxide control plane resources with an identity"
version = "0.1.0"
authors = ["David Pacheco <dap@oxidecomputer.com>"]
edition.workspace = true
repository = "https://github.com/oxidecomputer/omicron/"
license = "MPL-2.0"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
omicron-workspace-hack.workspace = true
