[package]
name = "bootstore"
description = "Storage required for rack unlock"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[build-dependencies.omicron-rpaths]
path = "../rpaths"

[dependencies]
bcs.workspace = true
derive_more.workspace = true
diesel = { workspace = true, features = ["sqlite", "uuid"] }
p256.workspace = true
# See omicron-rpaths for more about the "pq-sys" dependency.
# We don't actually need `pq-sys` here, other than to satisfy
# `[build-dependencies.omicron-rpaths]`, which are needed by `omicron-test-
# utils`. Unfortunately, it doesn't appear possible to put the `pq-sys` dep
# only in `[dev-dependencies]`.
pq-sys = "*"
rand = { workspace = true, features = ["getrandom"] }
serde.workspace = true
sha3.workspace = true
slog.workspace = true
sprockets-common.workspace = true
sprockets-host.workspace = true
thiserror.workspace = true
uuid.workspace = true
vsss-rs.workspace = true
zeroize.workspace = true

[dev-dependencies]
assert_matches.workspace = true
bincode.workspace = true
omicron-test-utils.workspace = true
proptest.workspace = true
