[package]
name = "bootstore"
description = "Storage required for rack unlock"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[build-dependencies.omicron-rpaths]
path = "../rpaths"

[dependencies]
bcs = "0.1.4"
derive_more = "0.99.17"
diesel = { version = "2.0.2", features = ["sqlite", "uuid"] }
p256 = "0.9.0"
# See omicron-rpaths for more about the "pq-sys" dependency.
# We don't actually need `pq-sys` here, other than to satisfy
# `[build-dependencies.omicron-rpaths]`, which are needed by `omicron-test-
# utils`. Unfortunately, it doesn't appear possible to put the `pq-sys` dep
# only in `[dev-dependencies]`.
pq-sys = "*"
rand = { version = "0.8.5", features = ["getrandom"] }
serde = { version = "1.0", features = [ "derive" ] }
sha3 = "0.10.5"
slog = { version = "2.5", features = [ "max_level_trace", "release_max_level_debug" ] }
sprockets-common = { git = "http://github.com/oxidecomputer/sprockets", rev = "77df31efa5619d0767ffc837ef7468101608aee9" }
sprockets-host = { git = "http://github.com/oxidecomputer/sprockets", rev = "77df31efa5619d0767ffc837ef7468101608aee9" }
thiserror = "1.0"
uuid = { version = "1.2.1", features = [ "serde", "v4" ] }
vsss-rs = { version = "2.0.0", default-features = false, features = ["std"] }
zeroize = { version = "1.5.7", features = ["zeroize_derive", "std"] }

[dev-dependencies]
assert_matches = "1.5.0"
bincode = "1.3.3"
omicron-test-utils = { path = "../test-utils" }
proptest = "1.0.0"
