[package]
name = "bootstore"
description = "Storage required for rack unlock"
version = "0.1.0"
edition.workspace = true
license = "MPL-2.0"

[build-dependencies]
omicron-rpaths.workspace = true

[lints]
workspace = true

[dependencies]
bytes.workspace = true
camino.workspace = true
chacha20poly1305.workspace = true
ciborium.workspace = true
derive_more.workspace = true
hex.workspace = true
hkdf.workspace = true
omicron-common.workspace = true
# vsss-rs requires rand 0.8
rand08 = { workspace = true, features = ["getrandom"] }
secrecy.workspace = true
serde.workspace = true
serde_with.workspace = true
sha3.workspace = true
sled-hardware-types.workspace = true
slog.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
vsss-rs = { version = "=3.3.4", features = ["std", "curve25519"] }
zeroize.workspace = true

# See omicron-rpaths for more about the "pq-sys" dependency.
# We don't actually need `pq-sys` here, other than to satisfy
# `[build-dependencies.omicron-rpaths]`, which are needed by `omicron-test-
# utils`. Unfortunately, it doesn't appear possible to put the `pq-sys` dep
# only in `[dev-dependencies]`.
pq-sys = "*"
omicron-workspace-hack.workspace = true

[dev-dependencies]
assert_matches.workspace = true
camino-tempfile.workspace = true
omicron-test-utils.workspace = true
proptest.workspace = true
slog-async.workspace = true
slog-term.workspace = true
