[package]
name = "omicron-certificates"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
foreign-types.workspace = true
openssl.workspace = true
openssl-sys.workspace = true
thiserror.workspace = true

omicron-common.workspace = true

[dev-dependencies]
omicron-test-utils.workspace = true
rcgen.workspace = true
