[package]
name = "omicron-certificates"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
display-error-chain.workspace = true
foreign-types.workspace = true
openssl.workspace = true
openssl-sys.workspace = true
thiserror.workspace = true

omicron-common.workspace = true
omicron-workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
omicron-test-utils.workspace = true
rcgen.workspace = true
