[package]
name = "omicron-certificates"
version = "0.1.0"
edition.workspace = true
license = "MPL-2.0"

[lints]
workspace = true

[dependencies]
display-error-chain.workspace = true
foreign-types.workspace = true
openssl.workspace = true
openssl-sys.workspace = true
thiserror.workspace = true

omicron-common.workspace = true
omicron-workspace-hack.workspace = true

[dev-dependencies]
omicron-test-utils.workspace = true
rcgen.workspace = true
